# docker-testcontainers-intro-low-iq-team

./: .env  README.md  pyproject.toml
.github/classroom/: autograding.json
src/: etl.py
tests/: test.py
